// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/ButtonGroup defaultButtonGroup 1`] = `
<div
  className="sc-AxjAm eFwvwZ"
  data-testid={null}
>
  <div
    className="ButtonGroup__ButtonGroupControlLabel-g7627n-0 fA-DjJA"
  >
    View:
  </div>
  <div
    className="ButtonGroup__ButtonGroupWrapper-g7627n-1 eVtrbV"
  >
    <input
      className="ButtonGroup__ButtonGroupRadio-g7627n-2 cZWZEJ"
      id="Chapters"
      name="viewMode"
      type="radio"
      value="Chapters view"
    />
    <label
      className="ButtonGroup__ButtonGroupLabel-g7627n-3 kBdWZV"
      for="Chapters"
    >
      Chapters
    </label>
    <input
      checked={true}
      className="ButtonGroup__ButtonGroupRadio-g7627n-2 cZWZEJ"
      id="Groups"
      name="viewMode"
      type="radio"
      value="Groups view"
    />
    <label
      checked={true}
      className="ButtonGroup__ButtonGroupLabel-g7627n-3 hFiVhK"
      for="Groups"
    >
      Groups
    </label>
    <input
      className="ButtonGroup__ButtonGroupRadio-g7627n-2 cZWZEJ"
      id="Constraints"
      name="viewMode"
      type="radio"
      value="Constraints view"
    />
    <label
      className="ButtonGroup__ButtonGroupLabel-g7627n-3 kBdWZV"
      for="Constraints"
    >
      Constraints
    </label>
  </div>
</div>
`;

exports[`Storyshots Units/ButtonGroup Default button group 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 jYILjR"
  data-testid={null}
>
  <div
    className="sc-AxjAm eFwvwZ"
    data-testid={null}
  >
    <div
      className="ButtonGroup__ButtonGroupControlLabel-g7627n-0 fA-DjJA"
    >
      View:
    </div>
    <div
      className="ButtonGroup__ButtonGroupWrapper-g7627n-1 eVtrbV"
    >
      <input
        className="ButtonGroup__ButtonGroupRadio-g7627n-2 cZWZEJ"
        id="Chapters"
        name="viewMode"
        type="radio"
        value="Chapters view"
      />
      <label
        className="ButtonGroup__ButtonGroupLabel-g7627n-3 kBdWZV"
        for="Chapters"
      >
        Chapters
      </label>
      <input
        checked={true}
        className="ButtonGroup__ButtonGroupRadio-g7627n-2 cZWZEJ"
        id="Groups"
        name="viewMode"
        type="radio"
        value="Groups view"
      />
      <label
        checked={true}
        className="ButtonGroup__ButtonGroupLabel-g7627n-3 hFiVhK"
        for="Groups"
      >
        Groups
      </label>
      <input
        className="ButtonGroup__ButtonGroupRadio-g7627n-2 cZWZEJ"
        id="Constraints"
        name="viewMode"
        type="radio"
        value="Constraints view"
      />
      <label
        className="ButtonGroup__ButtonGroupLabel-g7627n-3 kBdWZV"
        for="Constraints"
      >
        Constraints
      </label>
    </div>
  </div>
</div>
`;
